// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommerceLinkPreview /> should properly decorate amazon urls 1`] = `
.c16 {
  cursor: pointer;
  font-size: 1.125rem;
  line-height: 1.5rem;
}

.c16:not(:first-child) {
  margin-left: 0.25rem;
}

.c16:not(:last-child) {
  margin-right: 0.25rem;
}

.c14 {
  background-color: #F5C056;
  border: 1px solid #F5C056;
  border-radius: 0.3125rem;
  color: #222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.625rem;
  min-height: 2.5rem;
}

.c14 .c15 {
  color: #222;
}

.c14:hover {
  background-color: #f4b73e;
  border: 1px solid #f4b73e;
  color: #222;
}

.c14:hover .c15 {
  color: #222;
}

.c14:disabled {
  background-color: #CCC;
  border: 1px solid #CCC;
  color: #FFF;
  cursor: default;
}

.c14:disabled .c15 {
  color: #FFF;
  cursor: default;
}

.c14:focus {
  background-color: #f2ae26;
  border: 1px solid #f2ae26;
  color: #222;
}

.c14:focus .c15 {
  color: #222;
}

.c14:enabled:active {
  background-color: #f0a50e;
  border: 1px solid #f0a50e;
  color: #222;
}

.c14:enabled:active .c15 {
  color: #222;
}

.c8 span {
  text-transform: capitalize;
  font-weight: bold;
}

.c9::before {
  content: '';
  margin-left: 8px;
  padding-left: 10px;
  line-height: 1.2;
  border-left: 1px solid #666;
}

.c0 {
  border: 1px solid #72AD75;
  margin: 50px auto 62px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 636px;
  font-family: FiraSans,sans-serif;
  clear: both;
}

.c4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  overflow: hidden;
  color: #666;
}

.c5 {
  margin: 10px;
  color: #666;
}

.c2 {
  margin: 10px;
  color: #666;
  min-width: 118px;
  max-width: 180px;
  margin: 0 10px;
}

.c2 img,
.c2 amp-img {
  position: absolute;
  min-width: 118px;
}

.c13 {
  margin: 10px;
  color: #666;
  margin-right: 16px;
  min-width: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 h2 {
  font-family: FiraSans,sans-serif;
  margin: 0;
}

.c6 h2 a {
  color: #666;
}

.c6 h2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  font-size: 13px;
}

.c10 {
  font-size: 12px;
}

.c11 {
  display: block;
  color: #72AD75;
  font-weight: bold;
}

.c12 {
  display: block;
  font-weight: bold;
}

.c3 {
  position: relative;
  padding-bottom: NaN%;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
  top: -19px;
  left: -17px;
  background: #72AD75;
  height: 55px;
  width: 55px;
  min-width: 55px;
  border-radius: 50%;
  line-height: 55px;
  text-align: center;
  font-size: 20px;
}

.c1 span {
  color: #FFF;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
}

.c1 svg {
  width: 34px;
  height: 34px;
  color: #FFF;
  margin: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (max-width:37.31em) {
  .c6 h2 {
    font-size: 16px;
    line-height: 1.2;
    margin-bottom: 7 / 2;
  }
}

@media only screen and (min-width:37.37em) {
  .c6 h2 {
    font-size: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c7 {
    line-height: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c10 {
    line-height: 20px;
  }
}

<aside
  class=""
>
  <div
    class="c0"
  >
    <a
      class="c1"
      data-amazonsin="B0771P9WWQ"
      data-amazonsubtag="[t|link[p|postId[a|B0771P9WWQ[au|authorId[b|blogGroup[lt|inset"
      data-amazontag="amazonAffiliateTag"
      data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - price click\\",\\"permalinkUrl,B0771P9WWQ\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - price click\\",\\"permalinkUrl,B0771P9WWQ\\"]]"
      data-linktype="[t|mod-title"
      href="https://www.amazon.com/dp/B0771P9WWQ/ref=ods_gw_d_h1_tab_sz_btpr?ascsubtag=c580860589819c9f1420907a1d501b5b9a34d0ee&pf_rd_p=0a387cec-3f09-45eb-b2df-b021c86a174d&pf_rd_r=7H96CKCA2G1ZYSD3YR4G&tag=amazonAffiliateTag"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        $
        2
      </span>
    </a>
    <div
      class="c2"
    >
      <a
        data-amazonsin="B0771P9WWQ"
        data-amazonsubtag="[t|link[p|postId[a|B0771P9WWQ[au|authorId[b|blogGroup[lt|inset"
        data-amazontag="amazonAffiliateTag"
        data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - image click\\",\\"permalinkUrl,B0771P9WWQ\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - image click\\",\\"permalinkUrl,B0771P9WWQ\\"]]"
        data-linktype="[t|mod-image"
        href="https://www.amazon.com/dp/B0771P9WWQ/ref=ods_gw_d_h1_tab_sz_btpr?ascsubtag=c580860589819c9f1420907a1d501b5b9a34d0ee&pf_rd_p=0a387cec-3f09-45eb-b2df-b021c86a174d&pf_rd_r=7H96CKCA2G1ZYSD3YR4G&tag=amazonAffiliateTag"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="js_lazy-image c3"
        >
          <div>
            <img
              data-anim-src=""
              data-chomp-id="img-id"
              data-format="jpg"
              data-srcset="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_80,q_80,w_80/img-id.jpg 80w, https://i.kinja-img.com/gawker-media/image/upload/c_fit,fl_progressive,q_80,w_320/img-id.jpg 320w, https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,fl_progressive,q_80,w_470/img-id.jpg 470w, https://i.kinja-img.com/gawker-media/image/upload/c_scale,f_auto,fl_progressive,q_80,w_800/img-id.jpg 800w, https://i.kinja-img.com/gawker-media/image/upload/c_scale,f_auto,fl_progressive,q_80,w_1600/img-id.jpg 1600w"
              draggable="auto"
              sizes="180px"
              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            />
          </div>
        </div>
      </a>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <h2>
            <a
              data-amazonsin="B0771P9WWQ"
              data-amazonsubtag="[t|link[p|postId[a|B0771P9WWQ[au|authorId[b|blogGroup[lt|inset"
              data-amazontag="amazonAffiliateTag"
              data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\"permalinkUrl,B0771P9WWQ\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\"permalinkUrl,B0771P9WWQ\\"]]"
              data-linktype="[t|mod-title"
              href="https://www.amazon.com/dp/B0771P9WWQ/ref=ods_gw_d_h1_tab_sz_btpr?ascsubtag=c580860589819c9f1420907a1d501b5b9a34d0ee&pf_rd_p=0a387cec-3f09-45eb-b2df-b021c86a174d&pf_rd_r=7H96CKCA2G1ZYSD3YR4G&tag=amazonAffiliateTag"
              rel="noopener noreferrer"
              target="_blank"
            >
              Headline
            </a>
          </h2>
        </header>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            From  
            <span>
              provider
            </span>
          </span>
          <span
            class="c9"
          >
            Use code promo
          </span>
        </div>
        <div
          class="c10"
        >
          <span
            class="c11"
          >
            82 purchased by readers
          </span>
          <span
            class="c12"
          >
            G/O Media may get a commission
          </span>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <a
        data-amazonsin="B0771P9WWQ"
        data-amazonsubtag="[t|link[p|postId[a|B0771P9WWQ[au|authorId[b|blogGroup[lt|inset"
        data-amazontag="amazonAffiliateTag"
        data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - Add to Cart click\\",\\"permalinkUrl,B0771P9WWQ\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - Add to Cart click\\",\\"permalinkUrl,B0771P9WWQ\\"]]"
        data-linktype="[t|mod-button"
        href="https://www.amazon.com/dp/B0771P9WWQ/ref=ods_gw_d_h1_tab_sz_btpr?ascsubtag=c580860589819c9f1420907a1d501b5b9a34d0ee&pf_rd_p=0a387cec-3f09-45eb-b2df-b021c86a174d&pf_rd_r=7H96CKCA2G1ZYSD3YR4G&tag=amazonAffiliateTag"
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          class="c14"
        >
          <label
            class="c15 c16"
          >
            Buy now
          </label>
        </button>
      </a>
    </div>
  </div>
</aside>
`;

exports[`<CommerceLinkPreview /> should render condensed by default 1`] = `
.c2 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  cursor: pointer;
  font-size: 1.125rem;
  line-height: 1.5rem;
}

.c14:not(:first-child) {
  margin-left: 0.25rem;
}

.c14:not(:last-child) {
  margin-right: 0.25rem;
}

.c12 {
  background-color: #F5C056;
  border: 1px solid #F5C056;
  border-radius: 0.3125rem;
  color: #222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.625rem;
  min-height: 2.5rem;
}

.c12 .c13 {
  color: #222;
}

.c12:hover {
  background-color: #f4b73e;
  border: 1px solid #f4b73e;
  color: #222;
}

.c12:hover .c13 {
  color: #222;
}

.c12:disabled {
  background-color: #CCC;
  border: 1px solid #CCC;
  color: #FFF;
  cursor: default;
}

.c12:disabled .c13 {
  color: #FFF;
  cursor: default;
}

.c12:focus {
  background-color: #f2ae26;
  border: 1px solid #f2ae26;
  color: #222;
}

.c12:focus .c13 {
  color: #222;
}

.c12:enabled:active {
  background-color: #f0a50e;
  border: 1px solid #f0a50e;
  color: #222;
}

.c12:enabled:active .c13 {
  color: #222;
}

.c8 span {
  text-transform: capitalize;
  font-weight: bold;
}

.c0 {
  border: 1px solid #72AD75;
  margin: 50px auto 62px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 636px;
  font-family: FiraSans,sans-serif;
  clear: both;
}

.c4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  overflow: hidden;
  color: #666;
}

.c5 {
  margin: 10px;
  color: #666;
}

.c3 {
  margin: 10px;
  color: #666;
  min-width: 118px;
  max-width: 180px;
  margin: 0 10px;
}

.c3 img,
.c3 amp-img {
  position: absolute;
  min-width: 118px;
}

.c11 {
  margin: 10px;
  color: #666;
  margin-right: 16px;
  min-width: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 h2 {
  font-family: FiraSans,sans-serif;
  margin: 0;
}

.c6 h2 a {
  color: #666;
}

.c6 h2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  font-size: 13px;
}

.c9 {
  font-size: 12px;
}

.c10 {
  display: block;
  font-weight: bold;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
  top: -19px;
  left: -17px;
  background: #72AD75;
  height: 55px;
  width: 55px;
  min-width: 55px;
  border-radius: 50%;
  line-height: 55px;
  text-align: center;
  font-size: 20px;
}

.c1 span {
  color: #FFF;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
}

.c1 svg {
  width: 34px;
  height: 34px;
  color: #FFF;
  margin: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (max-width:37.31em) {
  .c6 h2 {
    font-size: 16px;
    line-height: 1.2;
    margin-bottom: 7 / 2;
  }
}

@media only screen and (min-width:37.37em) {
  .c6 h2 {
    font-size: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c7 {
    line-height: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c9 {
    line-height: 20px;
  }
}

<aside
  class=""
>
  <div
    class="c0"
  >
    <a
      class="c1"
      data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - undefined\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - undefined\\",\\",\\"]]"
      data-linktype="[t|mod-undefined"
      href="url?"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="c2"
      >
        <svg
          aria-label="DealsBox24 icon"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.6 4l9 2a.57.57 0 0 1 .06.02.5.5 0 0 1 .27.2l1.99 3a.5.5 0 0 1-.24.74l-1.68.63v6.4a.5.5 0 0 1-.24.43l-.08.04-9 3.5a.5.5 0 0 1-.07.03h-.03a.42.42 0 0 1-.14 0h-.02a.5.5 0 0 1-.1-.02h.04-.03l-9-3.47a.5.5 0 0 1-.33-.47v-6.51L.34 9.97a.5.5 0 0 1-.26-.76l1.98-2.97a.55.55 0 0 1 .2-.2A.47.47 0 0 1 2.4 6l-.07.02a.5.5 0 0 1 .05-.01h.02l9-2.01h.22zM3 10.85v5.84l8 3.08v-8.63l-1.08 1.63a.5.5 0 0 1-.58.2L3 10.85zm9-.15v9.07l8-3.12v-5.69l-5.32 2a.5.5 0 0 1-.46-.05l-.07-.06L12 10.7zm8.3-3.61L12.43 9.7l2.2 2.2 7.1-2.67-1.43-2.16zm-17.6 0L1.28 9.22 9.3 11.9l1.42-2.14L2.7 7.09zM11.5 5L4.37 6.6l7.13 2.37 7.13-2.37L11.5 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <div
      class="c3"
    >
      <a
        data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - image click\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - image click\\",\\",\\"]]"
        data-linktype="[t|mod-image"
        href="url?"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="c2"
        >
          <svg
            aria-label="DealsBox24 icon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.6 4l9 2a.57.57 0 0 1 .06.02.5.5 0 0 1 .27.2l1.99 3a.5.5 0 0 1-.24.74l-1.68.63v6.4a.5.5 0 0 1-.24.43l-.08.04-9 3.5a.5.5 0 0 1-.07.03h-.03a.42.42 0 0 1-.14 0h-.02a.5.5 0 0 1-.1-.02h.04-.03l-9-3.47a.5.5 0 0 1-.33-.47v-6.51L.34 9.97a.5.5 0 0 1-.26-.76l1.98-2.97a.55.55 0 0 1 .2-.2A.47.47 0 0 1 2.4 6l-.07.02a.5.5 0 0 1 .05-.01h.02l9-2.01h.22zM3 10.85v5.84l8 3.08v-8.63l-1.08 1.63a.5.5 0 0 1-.58.2L3 10.85zm9-.15v9.07l8-3.12v-5.69l-5.32 2a.5.5 0 0 1-.46-.05l-.07-.06L12 10.7zm8.3-3.61L12.43 9.7l2.2 2.2 7.1-2.67-1.43-2.16zm-17.6 0L1.28 9.22 9.3 11.9l1.42-2.14L2.7 7.09zM11.5 5L4.37 6.6l7.13 2.37 7.13-2.37L11.5 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </a>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <h2>
            <a
              data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"]]"
              data-linktype="[t|mod-title"
              href="url?"
              rel="noopener noreferrer"
              target="_blank"
            >
              Headline
            </a>
          </h2>
        </header>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            From  
            <span>
              provider
            </span>
          </span>
        </div>
        <div
          class="c9"
        >
          <span
            class="c10"
          >
            G/O Media may get a commission
          </span>
        </div>
      </div>
    </div>
    <div
      class="c11"
    >
      <a
        data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - Add to Cart click\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - Add to Cart click\\",\\",\\"]]"
        data-linktype="[t|mod-button"
        href="url?"
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          class="c12"
        >
          <label
            class="c13 c14"
          >
            Buy now
          </label>
        </button>
      </a>
    </div>
  </div>
</aside>
`;

exports[`<CommerceLinkPreview /> should render condensed with all fields 1`] = `
.c16 {
  cursor: pointer;
  font-size: 1.125rem;
  line-height: 1.5rem;
}

.c16:not(:first-child) {
  margin-left: 0.25rem;
}

.c16:not(:last-child) {
  margin-right: 0.25rem;
}

.c14 {
  background-color: #F5C056;
  border: 1px solid #F5C056;
  border-radius: 0.3125rem;
  color: #222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4375rem 0.625rem;
  min-height: 2.5rem;
}

.c14 .c15 {
  color: #222;
}

.c14:hover {
  background-color: #f4b73e;
  border: 1px solid #f4b73e;
  color: #222;
}

.c14:hover .c15 {
  color: #222;
}

.c14:disabled {
  background-color: #CCC;
  border: 1px solid #CCC;
  color: #FFF;
  cursor: default;
}

.c14:disabled .c15 {
  color: #FFF;
  cursor: default;
}

.c14:focus {
  background-color: #f2ae26;
  border: 1px solid #f2ae26;
  color: #222;
}

.c14:focus .c15 {
  color: #222;
}

.c14:enabled:active {
  background-color: #f0a50e;
  border: 1px solid #f0a50e;
  color: #222;
}

.c14:enabled:active .c15 {
  color: #222;
}

.c8 span {
  text-transform: capitalize;
  font-weight: bold;
}

.c9::before {
  content: '';
  margin-left: 8px;
  padding-left: 10px;
  line-height: 1.2;
  border-left: 1px solid #666;
}

.c0 {
  border: 1px solid #72AD75;
  margin: 50px auto 62px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 636px;
  font-family: FiraSans,sans-serif;
  clear: both;
}

.c4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  overflow: hidden;
  color: #666;
}

.c5 {
  margin: 10px;
  color: #666;
}

.c2 {
  margin: 10px;
  color: #666;
  min-width: 118px;
  max-width: 180px;
  margin: 0 10px;
}

.c2 img,
.c2 amp-img {
  position: absolute;
  min-width: 118px;
}

.c13 {
  margin: 10px;
  color: #666;
  margin-right: 16px;
  min-width: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 h2 {
  font-family: FiraSans,sans-serif;
  margin: 0;
}

.c6 h2 a {
  color: #666;
}

.c6 h2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  font-size: 13px;
}

.c10 {
  font-size: 12px;
}

.c11 {
  display: block;
  color: #72AD75;
  font-weight: bold;
}

.c12 {
  display: block;
  font-weight: bold;
}

.c3 {
  position: relative;
  padding-bottom: NaN%;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
  top: -19px;
  left: -17px;
  background: #72AD75;
  height: 55px;
  width: 55px;
  min-width: 55px;
  border-radius: 50%;
  line-height: 55px;
  text-align: center;
  font-size: 20px;
}

.c1 span {
  color: #FFF;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
}

.c1 svg {
  width: 34px;
  height: 34px;
  color: #FFF;
  margin: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (max-width:37.31em) {
  .c6 h2 {
    font-size: 16px;
    line-height: 1.2;
    margin-bottom: 7 / 2;
  }
}

@media only screen and (min-width:37.37em) {
  .c6 h2 {
    font-size: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c7 {
    line-height: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c10 {
    line-height: 20px;
  }
}

<aside
  class=""
>
  <div
    class="c0"
  >
    <a
      class="c1"
      data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - price click\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - price click\\",\\",\\"]]"
      data-linktype="[t|mod-title"
      href="url?"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        $
        2
      </span>
    </a>
    <div
      class="c2"
    >
      <a
        data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - image click\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - image click\\",\\",\\"]]"
        data-linktype="[t|mod-image"
        href="url?"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="js_lazy-image c3"
        >
          <div>
            <img
              data-anim-src=""
              data-chomp-id="img-id"
              data-format="jpg"
              data-srcset="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_80,q_80,w_80/img-id.jpg 80w, https://i.kinja-img.com/gawker-media/image/upload/c_fit,fl_progressive,q_80,w_320/img-id.jpg 320w, https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,fl_progressive,q_80,w_470/img-id.jpg 470w, https://i.kinja-img.com/gawker-media/image/upload/c_scale,f_auto,fl_progressive,q_80,w_800/img-id.jpg 800w, https://i.kinja-img.com/gawker-media/image/upload/c_scale,f_auto,fl_progressive,q_80,w_1600/img-id.jpg 1600w"
              draggable="auto"
              sizes="180px"
              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            />
          </div>
        </div>
      </a>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <h2>
            <a
              data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"]]"
              data-linktype="[t|mod-title"
              href="url?"
              rel="noopener noreferrer"
              target="_blank"
            >
              Headline
            </a>
          </h2>
        </header>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            From  
            <span>
              provider
            </span>
          </span>
          <span
            class="c9"
          >
            Use code promo
          </span>
        </div>
        <div
          class="c10"
        >
          <span
            class="c11"
          >
            82 purchased by readers
          </span>
          <span
            class="c12"
          >
            G/O Media may get a commission
          </span>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <a
        data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - Add to Cart click\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - Add to Cart click\\",\\",\\"]]"
        data-linktype="[t|mod-button"
        href="url?"
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          class="c14"
        >
          <label
            class="c15 c16"
          >
            Buy now
          </label>
        </button>
      </a>
    </div>
  </div>
</aside>
`;

exports[`<CommerceLinkPreview /> should render list item by default 1`] = `
.c2 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 span {
  text-transform: capitalize;
  font-weight: bold;
}

.c0 {
  border: 1px solid #72AD75;
  margin: 50px auto 62px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 636px;
  font-family: FiraSans,sans-serif;
  clear: both;
  margin: -10px auto 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: none;
}

.c3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  overflow: hidden;
  color: #666;
}

.c4 {
  margin: 10px;
  color: #666;
}

.c5 h2 {
  font-family: FiraSans,sans-serif;
  margin: 0;
}

.c5 h2 a {
  color: #666;
}

.c5 h2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 h2 {
  font-size: 16px;
}

.c5 h2 a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  max-width: 100%;
}

.c6 {
  font-size: 13px;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
  top: -19px;
  left: -17px;
  background: #72AD75;
  height: 55px;
  width: 55px;
  min-width: 55px;
  border-radius: 50%;
  line-height: 55px;
  text-align: center;
  font-size: 20px;
  position: relative;
  top: -3px;
  left: auto;
  font-size: 16px;
  height: 44px;
  width: 44px;
  min-width: 44px;
  line-height: 44px;
}

.c1 span {
  color: #FFF;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
}

.c1 svg {
  width: 34px;
  height: 34px;
  color: #FFF;
  margin: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (max-width:37.31em) {
  .c5 h2 {
    font-size: 16px;
    line-height: 1.2;
    margin-bottom: 7 / 2;
  }
}

@media only screen and (min-width:37.37em) {
  .c5 h2 {
    font-size: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c6 {
    line-height: 20px;
  }
}

<aside
  class=""
>
  <div
    class="c0"
  >
    <a
      class="c1"
      data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - undefined\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - undefined\\",\\",\\"]]"
      data-linktype="[t|mod-undefined"
      href="url?"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="c2"
      >
        <svg
          aria-label="DealsBox24 icon"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.6 4l9 2a.57.57 0 0 1 .06.02.5.5 0 0 1 .27.2l1.99 3a.5.5 0 0 1-.24.74l-1.68.63v6.4a.5.5 0 0 1-.24.43l-.08.04-9 3.5a.5.5 0 0 1-.07.03h-.03a.42.42 0 0 1-.14 0h-.02a.5.5 0 0 1-.1-.02h.04-.03l-9-3.47a.5.5 0 0 1-.33-.47v-6.51L.34 9.97a.5.5 0 0 1-.26-.76l1.98-2.97a.55.55 0 0 1 .2-.2A.47.47 0 0 1 2.4 6l-.07.02a.5.5 0 0 1 .05-.01h.02l9-2.01h.22zM3 10.85v5.84l8 3.08v-8.63l-1.08 1.63a.5.5 0 0 1-.58.2L3 10.85zm9-.15v9.07l8-3.12v-5.69l-5.32 2a.5.5 0 0 1-.46-.05l-.07-.06L12 10.7zm8.3-3.61L12.43 9.7l2.2 2.2 7.1-2.67-1.43-2.16zm-17.6 0L1.28 9.22 9.3 11.9l1.42-2.14L2.7 7.09zM11.5 5L4.37 6.6l7.13 2.37 7.13-2.37L11.5 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <header
          class="c5"
        >
          <h2>
            <a
              data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"]]"
              data-linktype="[t|mod-title"
              href="url?"
              rel="noopener noreferrer"
              target="_blank"
            >
              Headline
            </a>
          </h2>
        </header>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            From  
            <span>
              provider
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</aside>
`;

exports[`<CommerceLinkPreview /> should render list item with all fields 1`] = `
.c6 span {
  text-transform: capitalize;
  font-weight: bold;
}

.c7::before {
  content: '';
  margin-left: 8px;
  padding-left: 10px;
  line-height: 1.2;
  border-left: 1px solid #666;
}

.c0 {
  border: 1px solid #72AD75;
  margin: 50px auto 62px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 636px;
  font-family: FiraSans,sans-serif;
  clear: both;
  margin: -10px auto 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: none;
}

.c2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  overflow: hidden;
  color: #666;
}

.c3 {
  margin: 10px;
  color: #666;
}

.c4 h2 {
  font-family: FiraSans,sans-serif;
  margin: 0;
}

.c4 h2 a {
  color: #666;
}

.c4 h2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 h2 {
  font-size: 16px;
}

.c4 h2 a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  max-width: 100%;
}

.c5 {
  font-size: 13px;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
  top: -19px;
  left: -17px;
  background: #72AD75;
  height: 55px;
  width: 55px;
  min-width: 55px;
  border-radius: 50%;
  line-height: 55px;
  text-align: center;
  font-size: 20px;
  position: relative;
  top: -3px;
  left: auto;
  font-size: 16px;
  height: 44px;
  width: 44px;
  min-width: 44px;
  line-height: 44px;
}

.c1 span {
  color: #FFF;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
}

.c1 svg {
  width: 34px;
  height: 34px;
  color: #FFF;
  margin: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (max-width:37.31em) {
  .c4 h2 {
    font-size: 16px;
    line-height: 1.2;
    margin-bottom: 7 / 2;
  }
}

@media only screen and (min-width:37.37em) {
  .c4 h2 {
    font-size: 20px;
  }
}

@media only screen and (max-width:37.31em) {
  .c5 {
    line-height: 20px;
  }
}

<aside
  class=""
>
  <div
    class="c0"
  >
    <a
      class="c1"
      data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - price click\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - price click\\",\\",\\"]]"
      data-linktype="[t|mod-title"
      href="url?"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        $
        2
      </span>
    </a>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <header
          class="c4"
        >
          <h2>
            <a
              data-ga="[[\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"],[\\"ns:unique\\",\\"Commerce Inset Clicks\\",\\"Commerce inset - product title click'\\",\\",\\"]]"
              data-linktype="[t|mod-title"
              href="url?"
              rel="noopener noreferrer"
              target="_blank"
            >
              Headline
            </a>
          </h2>
        </header>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            From  
            <span>
              provider
            </span>
          </span>
          <span
            class="c7"
          >
            Use code promo
          </span>
        </div>
      </div>
    </div>
  </div>
</aside>
`;
